[package]
name = "fil_hello_world_actor"
version = "0.1.0"
edition = "2021"

[dependencies]
cid = { version = "0.8.4", default-features = false }
multihash = { version = "0.16.2", default-features = false }
fvm_sdk = { version = "0.6.1", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }
fvm_shared = { version = "0.6.1", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }
fvm_ipld_blockstore = { version = "0.1.0", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }
fvm_ipld_encoding = { version = "0.2.0", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }
serde = { version = "1.0.136", features = ["derive"] }
serde_tuple = "0.5"
anyhow = "1.0.56"
fvm_ipld_hamt = { version = "0.5.1", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }

[dev-dependencies]
fvm = { version = "0.7.1", git = "https://github.com/filecoin-project/ref-fvm", rev = "297a7694" }
libsecp256k1 = { version = "0.7" }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1.0.52"
wasmtime = "0.35.2"

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"
